# ConvFinQA

./: .blue  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
convfinqa/: chat_ui.py
convfinqa/data_loaders/: convfinqa_original_loader.py
convfinqa/document_analysers/: __init__.py  abstract_history_chat.py  agentic_chat.py  baseline_incontext_chat.py  langgraph_agentic_chat.py
convfinqa/document_analysers/langgraph/: langgraph_chat.py  langgraph_table_oracle.py  langraph_parallel_agents.py
scripts/: data_analysis.py  eval_gepa.py  evaluation.py  scorer.py
src/: chat_ui.py  chat_with_history.py  llm_client.py  prompts.py
src/data_loaders/: convfinqa_original_loader.py
tests/: conftest.py  test_chat_with_history.py
