[project]
name = "confinqa-experiments"
version = "0.1.0"
description = "ConfinQA benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.11.4",
    "openai>=2.21.0",
    "gradio==6.5.1",
]

[project.optional-dependencies]
dev = [
    "blue",
    "flake8",
    "flake8-eradicate",
    "flake8-quotes",
    "flake8-comments",
    "pre-commit",
    "pylint",
    "pytest",
    "rouge-score>=0.1.2",
    "tiktoken>=0.12.0",
    "xenon"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
