[project]
name = "confinqa-experiments"
version = "0.1.0"
description = "ConfinQA benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "gradio==6.5.1",
    "langgraph>=0.3.18",
    "langchain-openai>=0.3.9",
    "loguru>=0.7.3",
    "openai>=2.21.0",
    "pydantic>=2.11.4",
]

[project.optional-dependencies]
dev = [
    "blue",
    "flake8",
    "flake8-eradicate",
    "flake8-quotes",
    "flake8-comments",
    "pre-commit",
    "pylint",
    "pytest",
    "rouge-score>=0.1.2",
    "tiktoken>=0.12.0",
    "xenon"
]

[tool.setuptools.packages.find]
include = ["convfinqa", "scripts"]
